2012-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* c-unistd.h [CYGWIN]: Explicitly #include <kpathsea/getopt.h>
	such that <getopt.h> from Cygwin will be skipped.

2012-02-27  Ken Brown  <kbrow1i@gmail.com>

	* getopt.h: Cygwin requires getopt() prototype.

2011-12-22  Karl Berry  <karl@tug.org>

	* texmf.cnf (TEX.pmpost, TEXINPUTS.(e)up(la)tex): new definitions,
	from Norbert.

2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.

2011-10-27  Karl Berry  <karl@tug.org>

	* texmf.cnf (FONTCONFIG_*): doc+formatting fix.

2011-10-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* win32lib.c, win32lib.h: use const char * in system() and popen().

2011-09-30  Karl Berry  <karl@tug.org>

	* types.h (kpse_{ris,bltxml}_format): new types.
	* tex-file.c ({RIS,BLTXML}_ENVS): new defines.
	(kpse_init_format): initialize them.
	* texmf.cnf ({RIS,BLTXML}INPUTS): new definitions.
	Request from Phil Kime, tex-k 25 Sep 2011 16:46:07.

2011-08-28  Karl Berry  <karl@tug.org>

	* texmf.cnf (LUAINPUTS.lualatex, LUAINPUTS.dvilualatex): new defns.
	(LUAINPUTS): duplicate value of TEXINPUTS.luatex, instead
	of using $TEXINPUTS.
	Report from Herbert Voss, 15 Aug 2011 23:53:45,
	among others.

2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: Update version number 6.0.2dev => 6.1.0dev.

2011-08-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (SUBDIRS): Add win32 to build C programs from
	Akira's W32TeX as WIN32 replacements for the shell scripts.

2011-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* progname.c (fix_selfdir): Simplified to not modify arg.
	(remove_dots): Somewhat clarify the code (suggested by Karl).
	* progname.h [WIN32]: Don't declare {kpathsea,kpse)_selfdir().

	* progname.c [TEST]: Update and extend the test program.
	* Makefile.am (progname-test): Add rules to build the standalone
	test program.

2011-08-08  Karl Berry  <karl@tug.org>
