@@ -1,6 +1,6 @@
 /* Getopt for GNU.
 
-   Copyright 2008, 2009, 2010, 2011 Karl Berry.
+   Copyright 2008-2012 Karl Berry.
    Copyright (C) 1987, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 2000, 2010
         Free Software Foundation, Inc.
 
@@ -220,18 +220,6 @@ static char *my_index(const char *str, int chr)
     }
   return 0;
 }
-
-/* If using GCC, we can safely declare strlen this way.
-   If not using GCC, it is ok not to declare it.  */
-#ifdef __GNUC__
-/* Note that Motorola Delta 68k R3V7 comes with GCC but not stddef.h.
-   That was relevant to code that was here before.  */
-#if !defined (__STDC__) || !__STDC__
-/* gcc with -traditional declares the built-in strlen to return int,
-   and has done so at least since version 2.4.5. -- rms.  */
-extern int strlen (const char *);
-#endif /* not __STDC__ */
-#endif /* __GNUC__ */
 
 #endif /* not __GNU_LIBRARY__ */
 
